	Preparatory work for PR target/21623: 	* alpha.c (secondary_reload_class): Rename to: 	(alpha_secondary_reload_class). 	* alpha.h, alpha-protos.h: Likewise. 	* mn10300.c (secondary_reload_class): Rename to: 	(mn10300_secondary_reload_class). 	* mn10300.h, mn10300-protos.h: Likewise. 	* pa.c (secondary_reload_class): Rename to: 	(pa_secondary_reload_class). 	* pa.h, pa-protos.h: Likewise. 	* rs6000.c (secondary_reload_class): Rename to: 	rs6000_secondary_reload_class. 	* rs6000.h, rs6000-protos.h: Likewise.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@107381 138bc75d-0d04-0410-961f-82ee72b054a4